--- a/turing_machine/turing_machine.xcodeproj/xcshareddata/xcschemes/turing_machine_tests.xcscheme
+++ b/turing_machine/turing_machine.xcodeproj/xcshareddata/xcschemes/turing_machine_tests.xcscheme
@@ -56,6 +56,10 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "[parser]"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "-d yes"
             isEnabled = "NO">
          </CommandLineArgument>
